--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -13,12 +13,18 @@ uvicorn = "^0.36.0"
 python-multipart = "^0.0.20"
 openai = "^1.108.1"
 python-dotenv = "^1.1.1"
+slowapi = "^0.1.9"
 
 [tool.poetry.group.dev.dependencies]
 debugpy = "^1.8.0"
+pytest = "^8.4.2"
+pytest-asyncio = "^1.2.0"
+httpx = "^0.28.1"
+pytest-mock = "^3.15.1"
 
 [tool.poetry.scripts]
 start = "main:main"
+test = "pytest"
 
 [build-system]
 requires = ["poetry-core"]
